# iucn-get-data

./: .gitignore  README.md  pyproject.toml
examples/: ecosystem_map_display.ipynb  load_gee_vector.ipynb  load_parquet.ipynb
src/: __init__.py  main.py
src/iucn_get_data/: __init__.py  core.py  ecosystem_map.py  examples.py  main.py
src/iucn_get_data/backends/: __init__.py  _ee_common.py  cog.py  ee_raster.py  ee_vector.py  parquet.py
src/iucn_get_data/data/: french.yaml  map_style.yaml  spanish.yaml  typology.yaml
tests/: __init__.py  test_backends.py  test_core.py  test_ecosystem_map.py  test_main.py
tests/test_data/: null_island.parquet  null_island.tif
