[project]
name = "iucn-get-data"
version = "0.0.2"
description = "Tools for working with IUCN Global Ecosystem Typology data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["iucn_get_data"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
iucn_get_data = ["py.typed", "data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
